<resources>
    <string name="app_name">Project</string>
    <string name="entrar">Entrar</string>
    <string name="text_registro">Crie uma conta aqui</string>
    <string name="descricao_imagem">Descrição da imagem</string>
    <string name="email_hint">Email</string>
    <string name="senha_hint">Senha</string>
    <string name="entrar_button_label">Entrar</string>
    <string name="entrada_email">Digite seu email</string>
    <string name="entrada_senha">Digite sua senha</string>
    <string name="title_registro">Registra-se</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="descricao_botao_usuario">imageButton3</string>
    <string name="descricao_botao_perfil">imageButton2</string>
    <string name="descricao_home">button_feed2</string>
    <string name="descricao_botao_msn">imageButton4</string>
    <string name="descricao_botao_lupa">imageButton7</string>
    <string name="descricao">imageButton5</string>


</resources>