<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FormConversas">

    <TextView
        android:id="@+id/conversas"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="36dp"
        android:text="  Conversas"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_conversas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversas" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="4dp"
        android:gravity="fill_horizontal|center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/button_feed2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/home"
            android:contentDescription="@string/descricao_home"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/lupa"
            android:contentDescription="@string/descricao_botao_lupa"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/add_anuncio"
            android:contentDescription="@string/descricao_botao_usuario"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/msn"
            android:contentDescription="@string/descricao_botao_msn"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/user"
            android:contentDescription="@string/descricao_botao_perfil"
            android:scaleType="fitCenter" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>