<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_escuro"

    tools:context=".FormLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/descricao_imagem"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:autofillHints="emailAddress"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="335dp" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:autofillHints="password"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/senha_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="40dp" />




    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="590dp" />

    <Button
        android:id="@+id/button_criar_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_barra"
        android:text="@string/text_registro"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar" />

    <Button
        android:id="@+id/button_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Entrar"
        android:backgroundTint="@color/laranja"
        android:textSize="30dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/progressbar"
        app:layout_constraintEnd_toEndOf="@+id/edit_senha"
        app:layout_constraintStart_toStartOf="@+id/edit_senha"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha" />


</androidx.constraintlayout.widget.ConstraintLayout>