<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".views.FormFeed">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <SearchView
        android:id="@+id/barra_pesquisar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:iconifiedByDefault="false"
        android:queryHint="Pesquisar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="414dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_icones"
        android:text="Últimos anúncios"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:fontFamily="@font/laila"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra_pesquisar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="fill_horizontal|center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/button_feed2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/home"
            android:contentDescription="@string/descricao_home"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/button_pesquisar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/lupa"
            android:contentDescription="@string/descricao_botao_lupa"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/add_anuncio"
            android:contentDescription="@string/descricao_botao_usuario"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/msn"
            android:contentDescription="@string/descricao_botao_msn"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/feed_profile_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/user"
            android:contentDescription="@string/descricao_botao_perfil"
            android:scaleType="fitCenter" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
