<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FormPerfil">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="133dp"
        android:layout_height="100dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="139dp"
        android:fontFamily="@font/dancing_script"
        android:text="Perfil"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNextScreen"
        android:layout_width="195dp"
        android:layout_height="127dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/botao_telas"
        android:fontFamily="@font/actor"
        android:text="Adicionar novo anúncio"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNextScreen2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNextScreen5"
        android:layout_width="195dp"
        android:layout_height="127dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/botao_telas"
        android:fontFamily="@font/actor"
        android:text="Meus anúncios"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonNextScreen2"
        app:layout_constraintTop_toBottomOf="@+id/buttonNextScreen" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNextScreen2"
        android:layout_width="195dp"
        android:layout_height="127dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/botao_telas"
        android:fontFamily="@font/actor"
        android:text="Ver o meu perfil"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonNextScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNextScreen3"
        android:layout_width="195dp"
        android:layout_height="127dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/botao_telas"
        android:fontFamily="@font/actor"
        android:text="Artigos Favoritos"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonNextScreen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNextScreen2" />

    <ImageButton
        android:id="@+id/button_feed2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/home"
        android:scaleType="fitCenter"
        android:contentDescription="@string/descricao_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton7"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/user"
        android:scaleType="fitCenter"
        android:contentDescription="@string/descricao_botao_perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/add_anuncio"
        android:scaleType="fitCenter"
        android:contentDescription="@string/descricao_botao_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/msn"
        android:scaleType="fitCenter"
        android:contentDescription="@string/descricao_botao_msn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/lupa"
        android:scaleType="fitCenter"
        android:contentDescription="@string/descricao_botao_lupa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/button_feed2"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="89dp"
        android:layout_height="104dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />


</androidx.constraintlayout.widget.ConstraintLayout>